--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,29 @@
 {
   "name": "Lounas Arpoja",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "manifest_version": 2,
-  "description": "This extension is for art",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Tämä extension arpoo lounaita",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "default_locale": "en",
-  "background": {
-    "page": "src/bg/background.html",
-    "persistent": false
-  },
   "page_action": {
     "default_icon": "icons/icon19.png",
-    "default_title": "page action demo",
-    "default_popup": "src/page_action/page_action.html"
+    "default_title": "Lounas Arpoja"
   },
   "content_scripts": [
     {
       "matches": [
         "https://www.lounaat.info/*"
+      ],
+      "exclude_globs": [
+        "https://www.lounaat.info/lounas/*",
+        "https://www.lounaat.info/ehdota",
+        "https://www.lounaat.info/palaute",
+        "https://www.lounaat.info/tietoja",
+        "https://www.lounaat.info/rekisteriseloste",
+        "https://www.lounaat.info/kayttoehdot"
       ],
       "css": [
         "src/inject/inject.css"
@@ -31,6 +32,14 @@
     {
       "matches": [
         "https://www.lounaat.info/*"
+      ],
+      "exclude_globs": [
+        "https://www.lounaat.info/lounas/*",
+        "https://www.lounaat.info/ehdota",
+        "https://www.lounaat.info/palaute",
+        "https://www.lounaat.info/tietoja",
+        "https://www.lounaat.info/rekisteriseloste",
+        "https://www.lounaat.info/kayttoehdot"
       ],
       "js": [
         "src/inject/inject.js"
